severity button support

--- a/src/app/demo/view/formsdemo.component.html
+++ b/src/app/demo/view/formsdemo.component.html
@@ -37,7 +37,7 @@
                     <input type="text" pInputText>
                 </div>
             </div>
-            
+
             <h1>Filled InputText</h1>
             <div class="ui-g form-group">
                 <div class="ui-g-12 ui-md-4">
@@ -59,7 +59,7 @@
                     </span>
                 </div>
             </div>
-            
+
             <h1>TextBox</h1>
             <div class="ui-g form-group">
                 <div class="ui-g-12 ui-md-4">
@@ -80,7 +80,7 @@
                         <label>Phone</label>
                     </span>
                 </div>
-            </div>            
+            </div>
         </div>
 
         <div class="card card-w-title">
@@ -211,48 +211,48 @@
     <div class="ui-g-12">
         <div class="card card-w-title">
             <h1>Input Groups</h1>
-            
+
             <div class="ui-g form-group">
                 <div class="ui-g-12 ui-md-6">
                     <div class="ui-inputgroup">
                         <span class="ui-inputgroup-addon"><i class="material-icons">account_circle</i></span>
                         <span class="md-inputfield">
-                            <input type="text" pInputText> 
-                            <label>Username</label>        
+                            <input type="text" pInputText>
+                            <label>Username</label>
                         </span>
                     </div>
                 </div>
-                
+
                 <div class="ui-g-12 ui-md-6">
                     <div class="ui-inputgroup">
-                        <span class="ui-inputgroup-addon"><i class="material-icons">credit_card</i></span>  
-                        <span class="ui-inputgroup-addon"><i class="material-icons">card_travel</i></span>   
+                        <span class="ui-inputgroup-addon"><i class="material-icons">credit_card</i></span>
+                        <span class="ui-inputgroup-addon"><i class="material-icons">card_travel</i></span>
                         <span class="md-inputfield">
-                            <input type="text" pInputText> 
-                            <label>Price</label>        
+                            <input type="text" pInputText>
+                            <label>Price</label>
                         </span>
-                        <span class="ui-inputgroup-addon">$</span>  
-                        <span class="ui-inputgroup-addon">.00</span>      
+                        <span class="ui-inputgroup-addon">$</span>
+                        <span class="ui-inputgroup-addon">.00</span>
                     </div>
                 </div>
-                            
+
                 <div class="ui-g-12 ui-md-6">
                     <div class="ui-inputgroup">
                         <span class="md-inputfield">
-                            <input type="text" pInputText> 
-                            <label>Keyword</label>        
+                            <input type="text" pInputText>
+                            <label>Keyword</label>
                         </span>
-                        <button pButton type="button" icon="ui-icon-search"></button>      
+                        <button pButton type="button" icon="ui-icon-search"></button>
                     </div>
                 </div>
-                
+
                 <div class="ui-g-12 ui-md-6">
                     <div class="ui-inputgroup">
                         <span class="ui-inputgroup-addon"><p-checkbox></p-checkbox></span>
                         <span class="md-inputfield">
-                            <input type="text" pInputText> 
-                            <label>Confirm</label>        
-                        </span>         
+                            <input type="text" pInputText>
+                            <label>Confirm</label>
+                        </span>
                     </div>
                 </div>
             </div>
@@ -318,59 +318,71 @@
                 <p>Raised and Flat buttons with various color alternatives.</p>
                 <div class="ui-g">
                     <div class="ui-g-12 ui-md-6" style="text-align:center">
-                        <button pButton type="button" label="Primary Button" style="margin-bottom:10px"></button>
+                        <button pButton type="button" label="Primary" style="margin-bottom:10px"></button>
 
-                        <button pButton type="button" label="Inline Button" style="margin-bottom:10px;width:auto"></button>
+                        <div>
+                            <button pButton type="button" label="Inline" style="margin-bottom:10px;width:auto"></button>
+                        </div>
 
-                        <button pButton type="button" label="Blue-Grey Button" style="margin-bottom:10px" class="blue-grey-btn"></button>
+                        <button pButton type="button" label="Secondary" style="margin-bottom:10px;width:auto" class="ui-button-secondary"></button>
 
-                        <button pButton type="button" label="Cyan Button" style="margin-bottom:10px" class="cyan-btn"></button>
+                        <button pButton type="button" label="Green / Success" style="margin-bottom:10px" class="green-btn"></button>
 
-                        <button pButton type="button" label="Amber Button" style="margin-bottom:10px" class="amber-btn"></button>
+                        <button pButton type="button" label="Blue / Info" style="margin-bottom:10px" class="blue-btn"></button>
 
-                        <button pButton type="button" label="Teal Button" style="margin-bottom:10px" class="teal-btn"></button>
+                        <button pButton type="button" label="Amber / Warning" style="margin-bottom:10px" class="amber-btn"></button>
 
-                        <button pButton type="button" label="Red Button" style="margin-bottom:10px" class="red-btn"></button>
+                        <button pButton type="button" label="Red / Danger" style="margin-bottom:10px" class="red-btn"></button>
 
-                        <button pButton type="button" label="Orange Button" style="margin-bottom:10px" class="orange-btn"></button>
+                        <button pButton type="button" label="Blue-Grey" style="margin-bottom:10px" class="blue-grey-btn"></button>
 
-                        <button pButton type="button" label="Green Button" style="margin-bottom:10px" class="green-btn"></button>
+                        <button pButton type="button" label="Cyan" style="margin-bottom:10px" class="cyan-btn"></button>
 
-                        <button pButton type="button" label="Deep-Orange Button" style="margin-bottom:10px" class="deep-orange-btn"></button>
+                        <button pButton type="button" label="Teal" style="margin-bottom:10px" class="teal-btn"></button>
 
-                        <button pButton type="button" label="Purple Button" style="margin-bottom:10px" class="purple-btn"></button>
+                        <button pButton type="button" label="Orange" style="margin-bottom:10px" class="orange-btn"></button>
 
-                        <button pButton type="button" label="Indigo Button" style="margin-bottom:10px" class="indigo-btn"></button>
+                        <button pButton type="button" label="Deep-Orange" style="margin-bottom:10px" class="deep-orange-btn"></button>
 
-                        <button pButton type="button" label="Pink Button" style="margin-bottom:10px" class="pink-btn"></button>
+                        <button pButton type="button" label="Purple" style="margin-bottom:10px" class="purple-btn"></button>
+
+                        <button pButton type="button" label="Indigo" style="margin-bottom:10px" class="indigo-btn"></button>
+
+                        <button pButton type="button" label="Pink" style="margin-bottom:10px" class="pink-btn"></button>
                     </div>
 
                     <div class="ui-g-12 ui-md-6" style="text-align:center">
-                        <button pButton type="button" label="Primary Button" style="margin-bottom:10px" styleClass="flat"></button>
+                        <button pButton type="button" label="Primary" style="margin-bottom:10px" styleClass="flat"></button>
 
-                        <button pButton type="button" label="Inline Button" style="margin-bottom:10px;width:auto" styleClass="flat"></button>
+                        <div>
+                            <button pButton type="button" label="Inline" style="margin-bottom:10px;width:auto" styleClass="flat"></button>
+                        </div>
 
-                        <button pButton type="button" label="Blue-Grey Button" style="margin-bottom:10px" class="blue-grey-btn flat"></button>
+                        <button pButton type="button" label="Secondary" style="margin-bottom:10px;width:auto" class="ui-button-secondary flat"></button>
 
-                        <button pButton type="button" label="Cyan Button" style="margin-bottom:10px" class="cyan-btn flat"></button>
+                        <button pButton type="button" label="Green / Success" style="margin-bottom:10px" class="green-btn flat"></button>
 
-                        <button pButton type="button" label="Amber Button" style="margin-bottom:10px" class="amber-btn flat"></button>
+                        <button pButton type="button" label="Blue / Info" style="margin-bottom:10px" class="blue-btn flat"></button>
 
-                        <button pButton type="button" label="Teal Button" style="margin-bottom:10px" class="teal-btn flat"></button>
+                        <button pButton type="button" label="Amber / Warning" style="margin-bottom:10px" class="amber-btn flat"></button>
 
-                        <button pButton type="button" label="Red Button" style="margin-bottom:10px" class="red-btn flat"></button>
+                        <button pButton type="button" label="Red / Danger" style="margin-bottom:10px" class="red-btn flat"></button>
 
-                        <button pButton type="button" label="Orange Button" style="margin-bottom:10px" class="orange-btn flat"></button>
+                        <button pButton type="button" label="Blue-Grey" style="margin-bottom:10px" class="blue-grey-btn flat"></button>
 
-                        <button pButton type="button" label="Green Button" style="margin-bottom:10px" class="green-btn flat"></button>
+                        <button pButton type="button" label="Cyan" style="margin-bottom:10px" class="cyan-btn flat"></button>
 
-                        <button pButton type="button" label="Deep-Orange Button" style="margin-bottom:10px" class="deep-orange-btn flat"></button>
+                        <button pButton type="button" label="Teal" style="margin-bottom:10px" class="teal-btn flat"></button>
 
-                        <button pButton type="button" label="Purple Button" style="margin-bottom:10px" class="purple-btn flat"></button>
+                        <button pButton type="button" label="Orange" style="margin-bottom:10px" class="orange-btn flat"></button>
 
-                        <button pButton type="button" label="Indigo Button" style="margin-bottom:10px" class="indigo-btn flat"></button>
+                        <button pButton type="button" label="Deep-Orange" style="margin-bottom:10px" class="deep-orange-btn flat"></button>
 
-                        <button pButton type="button" label="Pink Button" style="margin-bottom:10px" class="pink-btn flat"></button>
+                        <button pButton type="button" label="Purple" style="margin-bottom:10px" class="purple-btn flat"></button>
+
+                        <button pButton type="button" label="Indigo" style="margin-bottom:10px" class="indigo-btn flat"></button>
+
+                        <button pButton type="button" label="Pink" style="margin-bottom:10px" class="pink-btn flat"></button>
                     </div>
                 </div>
             </div>
