--- a/src/assets/sass/layout/_menu_demo.scss
+++ b/src/assets/sass/layout/_menu_demo.scss
@@ -1,18 +1,20 @@
 .layout-tabmenu-content {
-    .inbox-tab {        
+    .inbox-tab {
+        width: 250px;
+        padding-bottom: 180px;
         ul {
             padding: 0 6px;
             margin: 0;
             list-style-type: none;
-            
+
             li {
                 padding: 8px 16px;
-                
+
                 img {
                     float: left;
                     margin-right: 8px;
                 }
-                
+
                 .name {
                     font-weight: bold;
                     float: left;
@@ -22,20 +24,20 @@
                 }
             }
         }
-        
+
         .inbox-labels {
             margin: 20px 6px 0 6px;
-            
+
             > span {
                 font-weight: bold;
             }
-            
+
             ul {
                 margin-top: 10px;
-                
+
                 li {
                     padding: 6px;
-                    
+
                     .inbox-label-badge {
                         color: $accentTextColor;
                         background-color: $accentColor;
@@ -45,21 +47,21 @@
                         margin-top: -3px;
                     }
                 }
-                
-                
+
+
             }
         }
     }
-    
+
     .calendar-tab {
         ul {
             padding: 0;
             margin: 0;
             list-style-type: none;
-            
+
             li {
                 padding: 8px 16px;
-                
+
                 .calendar-event-date {
                     float: left;
                     width: 48px;
@@ -72,39 +74,39 @@
                     margin-right: 8px;
                     background-color: $accentColor;
                     color: $accentTextColor;
-                    
+
                     span {
                         width: 100%;
                         display: inline-block;
-                    }    
+                    }
                 }
-                
+
                 .calendar-event-detail {
                     float: left;
-                    
+
                     .calendar-event-title {
                         font-weight: 700;
                         display: block;
                     }
-                    
+
                     i {
                         margin-right: 4px;
                         margin-top: 2px;
                     }
-                    
+
                     .calendar-event-location {
                         position: relative;
                         top: -6px;
                         left: -4px;
                     }
-                    
+
                     .calendar-event-rsvp {
                         display: block;
-                        
+
                         &.calendar-event-rsvp-yes {
                             color: #35ae47;
                         }
-                        
+
                         &.calendar-event-rsvp-maybe {
                             color: #f5a623;
                         }
@@ -113,16 +115,18 @@
             }
         }
     }
-    
+
     .projects-tab {
+        padding-bottom: 180px;
         ul {
-           padding: 8px 16px;
+            width: 250px;
+            padding: 8px 16px;
             margin: 0;
             list-style-type: none;
-            
+
             li {
                 padding: 12px 0;
-                
+
                 i {
                     font-size: 36px;
                     margin-right: 12px;
@@ -130,22 +134,22 @@
                     width: 32px;
                     color: $textSecondaryColor;
                 }
-                
+
                 .project-title {
                     font-weight: 700;
                 }
-                
+
                 span {
                     float: left;
                     display: block;
                 }
-                
+
                 .project-progressbar {
                     width: 100px;
                     float: left;
                     background-color: #545b61;
                     margin-top: 4px;
-                    
+
                     .project-progressbar-value {
                         background-color: $accentColor;
                         height: 4px;
@@ -154,21 +158,21 @@
             }
         }
     }
-    
+
     .team-tab {
         ul {
            padding: 8px 16px;
             margin: 0;
             list-style-type: none;
-            
+
             li {
                 padding: 6px 0;
-                
+
                 img {
                     float: left;
                     margin-right: 8px;
                 }
-                
+
                 .name {
                     font-weight: bold;
                     float: left;
@@ -176,7 +180,7 @@
                 .location {
                     float: left;
                 }
-                
+
                 span {
                     display: block;
                 }
@@ -221,14 +225,14 @@
                         margin-right: 0px;
                         margin-left: 8px;
                     }
-                    
+
                     .calendar-event-detail {
                         float: right;
                     }
                 }
             }
         }
-        
+
         .projects-tab {
             ul {
                 li {
@@ -237,7 +241,7 @@
                         margin-left: 8px;
                         float: right;
                     }
-                    
+
                     span {
                         float: right;
                     }
@@ -248,7 +252,7 @@
                 }
             }
         }
-    
+
         .team-tab {
             ul {
                 padding: 0 6px;
