--- a/src/app/demo/view/formsdemo.component.html
+++ b/src/app/demo/view/formsdemo.component.html
@@ -326,13 +326,13 @@
 
                         <button pButton type="button" label="Secondary" style="margin-bottom:10px;width:auto" class="ui-button-secondary"></button>
 
-                        <button pButton type="button" label="Green / Success" style="margin-bottom:10px" class="green-btn"></button>
+                        <button pButton type="button" label="Green / Success" style="margin-bottom:10px" class="ui-button-success"></button>
 
-                        <button pButton type="button" label="Blue / Info" style="margin-bottom:10px" class="blue-btn"></button>
+                        <button pButton type="button" label="Blue / Info" style="margin-bottom:10px" class="ui-button-info"></button>
 
-                        <button pButton type="button" label="Amber / Warning" style="margin-bottom:10px" class="amber-btn"></button>
+                        <button pButton type="button" label="Amber / Warning" style="margin-bottom:10px" class="ui-button-warning"></button>
 
-                        <button pButton type="button" label="Red / Danger" style="margin-bottom:10px" class="red-btn"></button>
+                        <button pButton type="button" label="Red / Danger" style="margin-bottom:10px" class="ui-button-danger"></button>
 
                         <button pButton type="button" label="Blue-Grey" style="margin-bottom:10px" class="blue-grey-btn"></button>
 
