--- a/src/assets/sass/theme/_menu.scss
+++ b/src/assets/sass/theme/_menu.scss
@@ -100,6 +100,10 @@ body {
         .ui-menuitem-text {
             vertical-align: middle;
         }
+
+        .ui-menuitem-icon {
+            color: #757575;
+        }
     }
 
     .ui-menubar,
