last fixes and doc updated

--- a/src/app/demo/view/documentation.component.html
+++ b/src/app/demo/view/documentation.component.html
@@ -3,7 +3,7 @@
         <div class="card docs">
 
             <h1>Current Version</h1>
-            <p>Angular 5.2 and PrimeNG 5.2</p>
+            <p>Angular 6 and PrimeNG 6</p>
 
             <h1>Getting Started</h1>
             <p>Barcelona is a true native application template for Angular and is distributed as a CLI project. If you don't have CLI installed already run the following commands to set it up. In case
@@ -209,13 +209,15 @@ export class AppMenuComponent implements OnInit &#123;
           <p>Install PrimeNG</p>
 <pre>
 npm install primeng@latest --save
+npm install primeicons@latest --save
 </pre>
 
-          <p>Add PrimeNG CSS at styles section in angular-cli.json.</p>
+          <p>Add PrimeNG CSS at styles section in angular.json.</p>
 
 <pre>
 "styles": [
     "../node_modules/primeng/resources/primeng.min.css",        //required: PrimeNG components
+    "node_modules/primeicons/primeicons.css",                   //required: PrimeIcons
     "styles.scss"                                               //your styles and overrides
 ],
 </pre>
@@ -314,13 +316,6 @@ $darkMenuBgColor:#424242;
 
 @import '../../sass/layout/_layout';
 </pre>
-
-            <p>Check out the video tutorial that follows the steps above to create the dark-blue theme and layout. It is based on PrimeFaces version but generation part
-                applies to PrimeNG as well.</p>
-
-            <div class="video-container">
-                <iframe src="https://www.youtube.com/embed/3dW61t1TKyc" frameborder="0"></iframe>
-            </div>
 
             <p>For both cases, several .scss files such as _layout.scss, _theme.scss or _variables.scss has to be present relative to your scss files, these are available inside the resources/sass folder in the distribution.</p>
             <p>In case you'd like to customize the structure not just the colors, the _variables.scss is where the structural variables (e.g. font size, paddings) for the layout are defined.</p>
@@ -430,6 +425,18 @@ label: 'Components', icon: 'list', badge: '2', badgeStyleClass: 'red-badge'
             <h1>Migration Guide</h1>
             <p>For seamless updates and easier maintenance, we suggest keeping your CSS customizations in a separate sass file so that your changes
             are not overriden with an update.</p>
+
+            <h4>5.2.5 to 6.0.0</h4>
+            <p>Brings support for Angular 6 and RxJS 6, adds theming for new components in PrimeNG such as the new TreeTable
+                and improves behaviors of the layout menus.</p>
+            <ul>
+                <li>Add PrimeIcons package.</li>
+                <li>Update app.module.ts and app.component.ts.</li>
+                <li>Update app.topbar.component.ts.</li>
+                <li>Update app.menu.component.ts.</li>
+                <li>Update layout css files.</li>
+                <li>Update theme css files.</li>
+            </ul>
 
             <h4>5.2.4 to 5.2.5</h4>
             <ul>
