--- a/src/assets/sass/theme/_menu.scss
+++ b/src/assets/sass/theme/_menu.scss
@@ -118,7 +118,7 @@ body {
     }
 
     .ui-menu {
-        width: 100%;
+        width: 12.5em;
         padding: .5em 0;
 
         .ui-menuitem {
